# swarm-apocalypse

./: README.md  simulation_results.txt
controllers/: CMakeLists.txt
controllers/eyebot_apocalypse/: CMakeLists.txt  eyebot_being.cpp  eyebot_being.h  eyebot_medic.cpp  eyebot_medic.h
controllers/eyebot_circle/: eyebot_circle.cpp
docs/gnu-plot/: gnuplot_attraction_gain.gnu  gnuplot_exponent.gnu  gnuplot_gain.gnu
experiments/: ex1_eyebot_apocalypse_healthy_only_reach_target.argos  ex2_eyebot_apocalypse_infected_only_reach_target.argos  ex3_eyebot_apocalypse_medic_only_reach_target.argos  ex4_eyebot_apocalypse_all_together_achieving_target_with_losses.argos  ex5_eyebot_apocalypse_all_together_achieving_target_without_losses.argos  ex6_eyebot_apocalypse_healthy_and_infected_only_reach_target.argos  ex7_eyebot_apocalypse_infected_and_medic_only_reach_target.argos  ex8_eyebot_apocalypse_infected_and_medic_curing_before_reach_target.argos  experiments-generator.py  eyebot_apocalypse  eyebot_apocalypse.argos  eyebot_apocalypse_all_together.argos  eyebot_apocalypse_healthy_only.argos  eyebot_apocalypse_infected_only.argos  eyebot_apocalypse_medic_only.argos  eyebot_flocking.argos
experiments/argos/: eyebot_apocalypse.argos
experiments/generated_experiments_curing_time_altered/: eyebot_apocalypse_ex0.argos  eyebot_apocalypse_ex1.argos  (+9 more)
loop_functions/: CMakeLists.txt
loop_functions/apocalypse_loop_functions/: CMakeLists.txt  apocalypse_loop_functions.cpp  apocalypse_loop_functions.h  apocalypse_qt_user_functions.cpp  apocalypse_qt_user_functions.h
(+24 files in other folders)
